remove sun.misc.BASE64Decoder/BASE64Encoder